librocksdb_sys/src/lib.rs


    pub fn rocksdb_approximate_sizes(db: *mut DBInstance,
                                     num_ranges: c_int,
                                     range_start_key: *const *const u8,
                                     range_start_key_len: *const size_t,
                                     range_limit_key: *const *const u8,
                                     range_limit_key_len: *const size_t,
                                     sizes: *mut uint64_t);
    pub fn rocksdb_approximate_sizes_cf(db: *mut DBInstance,
                                        cf: *mut DBCFHandle,
                                        num_ranges: c_int,
                                        range_start_key: *const *const u8,
                                        range_start_key_len: *const size_t,
                                        range_limit_key: *const *const u8,
                                        range_limit_key_len: *const size_t,
                                        sizes: *mut uint64_t);
    pub fn rocksdb_compact_range(db: *mut DBInstance,
                                 start_key: *const u8,
                                 start_key_len: size_t,
                                 limit_key: *const u8,
                                 limit_key_len: size_t);
    pub fn rocksdb_compact_range_cf(db: *mut DBInstance,
                                    cf: *mut DBCFHandle,
                                    start_key: *const u8,
                                    start_key_len: size_t,
                                    limit_key: *const u8,
                                    limit_key_len: size_t);
    pub fn rocksdb_delete_file_in_range(db: *mut DBInstance,
                                        range_start_key: *const u8,
                                        range_start_key_len: size_t,
                                        range_limit_key: *const u8,
                                        range_limit_key_len: size_t,
                                        err: *mut *mut c_char);
    pub fn rocksdb_delete_file_in_range_cf(db: *mut DBInstance,
                                           cf: *mut DBCFHandle,
                                           range_start_key: *const u8,
                                           range_start_key_len: size_t,
                                           range_limit_key: *const u8,
                                           range_limit_key_len: size_t,
                                           err: *mut *mut c_char);
    pub fn rocksdb_property_value(db: *mut DBInstance, propname: *const c_char) -> *mut c_char;
    pub fn rocksdb_property_value_cf(db: *mut DBInstance,
                                     cf: *mut DBCFHandle,
                                     propname: *const c_char)
                                     -> *mut c_char;
    // Compaction filter
    pub fn rocksdb_compactionfilter_create(state: *mut c_void,
                                           destructor: extern "C" fn(*mut c_void),
                                           filter: extern "C" fn(*mut c_void,
                                                                 c_int,
                                                                 *const u8,
                                                                 size_t,
                                                                 *const u8,
                                                                 size_t,
                                                                 *mut *mut u8,
                                                                 *mut size_t,
                                                                 *mut bool)
                                                                 -> bool,
                                           name: extern "C" fn(*mut c_void) -> *const c_char)
                                           -> *mut DBCompactionFilter;
    pub fn rocksdb_compactionfilter_set_ignore_snapshots(filter: *mut DBCompactionFilter,
                                                         ignore_snapshot: bool);
    pub fn rocksdb_compactionfilter_destroy(filter: *mut DBCompactionFilter);
}

#[cfg(test)]
mod test {
    use libc::{self, c_void};
    use std::ffi::{CStr, CString};
    use std::ptr;
    use super::*;
    use tempdir::TempDir;

    #[test]
    fn internal() {
        unsafe {
            let opts = rocksdb_options_create();
            assert!(!opts.is_null());

            rocksdb_options_increase_parallelism(opts, 0);
            rocksdb_options_optimize_level_style_compaction(opts, 0);
            rocksdb_options_set_create_if_missing(opts, true);

            let rustpath = TempDir::new("_rust_rocksdb_internaltest").expect("");
            let cpath = CString::new(rustpath.path().to_str().unwrap()).unwrap();
            let cpath_ptr = cpath.as_ptr();

            let mut err = ptr::null_mut();
            let db = rocksdb_open(opts, cpath_ptr, &mut err);
            assert!(err.is_null(), error_message(err));

            let writeopts = rocksdb_writeoptions_create();
            assert!(!writeopts.is_null());

            let key = b"name\x00";
            let val = b"spacejam\x00";
            rocksdb_put(db, writeopts, key.as_ptr(), 4, val.as_ptr(), 8, &mut err);
            rocksdb_writeoptions_destroy(writeopts);
            assert!(err.is_null(), error_message(err));

            let readopts = rocksdb_readoptions_create();
            assert!(!readopts.is_null());

            let mut val_len = 0;
            rocksdb_get(db, readopts, key.as_ptr(), 4, &mut val_len, &mut err);
            rocksdb_readoptions_destroy(readopts);
            assert!(err.is_null(), error_message(err));

            // flush first to get approximate size later.
            let flush_opt = rocksdb_flushoptions_create();
            rocksdb_flushoptions_set_wait(flush_opt, true);
            rocksdb_flush(db, flush_opt, &mut err);
            rocksdb_flushoptions_destroy(flush_opt);
            assert!(err.is_null(), error_message(err));

            let mut sizes = vec![0; 1];
            rocksdb_approximate_sizes(db,
                                      1,
                                      vec![b"\x00\x00".as_ptr()].as_ptr(),
                                      vec![1].as_ptr(),
                                      vec![b"\xff\x00".as_ptr()].as_ptr(),
                                      vec![1].as_ptr(),
                                      sizes.as_mut_ptr());
            assert_eq!(sizes.len(), 1);
            assert!(sizes[0] > 0);

            rocksdb_delete_file_in_range(db,
                                         b"\x00\x00".as_ptr(),
                                         2,
                                         b"\xff\x00".as_ptr(),
                                         2,
                                         &mut err);
            assert!(err.is_null(), error_message(err));

            let propname = CString::new("rocksdb.total-sst-files-size").unwrap();
            let value = rocksdb_property_value(db, propname.as_ptr());
            assert!(!value.is_null());

            let sst_size = CStr::from_ptr(value).to_str().unwrap().parse::<u64>().unwrap();
            assert!(sst_size > 0);
            libc::free(value as *mut c_void);

            let propname = CString::new("fake_key").unwrap();
            let value = rocksdb_property_value(db, propname.as_ptr());
            assert!(value.is_null());
            libc::free(value as *mut c_void);

            rocksdb_close(db);
            rocksdb_destroy_db(opts, cpath_ptr, &mut err);
            assert!(err.is_null());
        }
    }
}
